--- a/.env_sample
+++ b/.env_sample
@@ -7,3 +7,11 @@ DB_NAME=
 DB_USER=
 DB_PASSWORD=
 DB_HOST=
+
+
+EMAIL_BACKEND =
+EMAIL_USE_TLS =
+EMAIL_HOST =
+EMAIL_HOST_USER =
+EMAIL_HOST_PASSWORD =
+EMAIL_PORT =
